@@ -56,11 +56,13 @@
  */
 
 MENU_CALLBACK( menu_file_open );
+MENU_CALLBACK( menu_file_recording_continuerecording );
 MENU_CALLBACK( menu_file_recording_insertsnapshot );
 MENU_CALLBACK( menu_file_recording_rollback );
 MENU_CALLBACK( menu_file_recording_rollbackto );
 MENU_CALLBACK( menu_file_recording_play );
 MENU_CALLBACK( menu_file_recording_stop );
+MENU_CALLBACK( menu_file_recording_finalise );
 MENU_CALLBACK( menu_file_aylogging_stop );
 MENU_CALLBACK( menu_file_openscrscreenshot );
 MENU_CALLBACK( menu_file_movie_stop );
